--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <script src="connect_four.js"></script>
 <script src="jquery.js"></script>
 
+<img class="board-image" src="http://www.nonkit.com/smallbasic.files/Connect4Board.png">
+
+<div id="winner-status"></div>
+
 <div class="board-container">
 	<div id="row1">
 		<div class="col1"></div>
